<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/gray1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/white">
    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:text="@string/enter_info"
        android:textColor="@color/gray2"
        android:gravity="start|center"
        android:paddingStart="@dimen/padding_10"
        android:background="@color/gray1"
        android:fontFamily="@font/iranyekan_mobile_regular" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/nameCly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        app:layout_constraintTop_toBottomOf="@id/titleTxt"
        android:layout_margin="@dimen/padding_10"
        android:padding="@dimen/padding_10"
        android:background="@drawable/border_black">
        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".3"
            android:text="@string/name"
            android:gravity="start"
            android:textColor="@color/blue"
            android:fontFamily="@font/iranyekan_mobile_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <EditText
            android:id="@+id/nameTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintStart_toEndOf="@id/nameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start"
            android:fontFamily="@font/iranyekan_mobile_regular"
            android:background="@color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableLeft="@drawable/dotted"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/familyCly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        app:layout_constraintTop_toBottomOf="@id/nameCly"
        android:layout_margin="@dimen/padding_10"
        android:padding="@dimen/padding_10"
        android:background="@drawable/border_black">
        <TextView
            android:id="@+id/familyLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".3"
            android:text="@string/family"
            android:fontFamily="@font/iranyekan_mobile_regular"
            android:gravity="start"
            android:textColor="@color/blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
           />
        <EditText
            android:id="@+id/familyTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintStart_toEndOf="@id/familyLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start"
            android:fontFamily="@font/iranyekan_mobile_regular"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/dotted"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mobileCly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        app:layout_constraintTop_toBottomOf="@id/familyCly"
        android:layout_margin="@dimen/padding_10"
        android:padding="@dimen/padding_10"
        android:background="@drawable/border_black">
        <TextView
            android:id="@+id/mobileLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".3"
            android:text="@string/mobile"
            android:gravity="start"
            android:fontFamily="@font/iranyekan_mobile_regular"
            android:textColor="@color/blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
           />
        <EditText
            android:id="@+id/mobileTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintStart_toEndOf="@id/mobileLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start"
            android:inputType="phone"
            android:fontFamily="@font/iranyekan_mobile_regular"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/dotted"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/phoneCly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        app:layout_constraintTop_toBottomOf="@id/mobileCly"
        android:layout_margin="@dimen/padding_10"
        android:padding="@dimen/padding_10"
        android:background="@drawable/border_black">
        <TextView
            android:id="@+id/phoneLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".3"
            android:text="@string/phone"
            android:gravity="start"
            android:fontFamily="@font/iranyekan_mobile_regular"
            android:textColor="@color/blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
           />
        <EditText
            android:id="@+id/phoneTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintStart_toEndOf="@id/phoneLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start"
            android:inputType="phone"
            android:fontFamily="@font/iranyekan_mobile_regular"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/dotted"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/padding_10"
        android:layout_marginTop="@dimen/padding_50"
        android:text="@string/address"
        android:gravity="start"
        android:fontFamily="@font/iranyekan_mobile_regular"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/phoneCly"
       />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/addressCly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        app:layout_constraintTop_toBottomOf="@id/addressLabel"
        android:layout_margin="@dimen/padding_10"
        android:padding="@dimen/padding_10"
        android:background="@drawable/border_black">
        <EditText
            android:id="@+id/addressTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:fontFamily="@font/iranyekan_mobile_regular"
            android:background="@color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableLeft="@drawable/dotted"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/sextualLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/padding_30"
        android:text="@string/sextual"
        android:gravity="start"
        android:fontFamily="@font/iranyekan_mobile_regular"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/addressCly"
       />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:animationCache="false"
        android:layout_margin="@dimen/padding_10"
        app:layout_constraintTop_toTopOf="@id/sextualLabel"
        app:layout_constraintBottom_toBottomOf="@id/sextualLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/border_black">

        <RadioButton
            android:id="@+id/maleRBtn"
            android:text="@string/male"
            android:layout_width="70dp"
            android:layout_height="@dimen/height_30"
            android:button="@null"
            android:fontFamily="@font/iranyekan_mobile_regular"
            android:gravity="center"
            android:background="@drawable/radiobtn_background"
            android:textColor="@drawable/radiobutton_text_color"
            />

        <RadioButton
            android:id="@+id/femaleRBtn"
            android:text="@string/femal"
            android:layout_width="70dp"
            android:layout_height="@dimen/height_30"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/radiobutton_text_color"
            android:fontFamily="@font/iranyekan_mobile_regular"
            android:background="@drawable/radiobtn_background"/>

    </RadioGroup>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/gray1"
        android:layout_marginTop="@dimen/padding_30"
        app:layout_constraintTop_toBottomOf="@id/sextualLabel">

        <Button
            android:id="@+id/nextStage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:layout_margin="@dimen/padding_30"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/button_background"
            android:textSize="@dimen/text_size_16"
            android:text="@string/next"
            android:fontFamily="@font/iranyekan_mobile_regular"
            android:textColor="@color/white"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>